Source/WebCore/rendering/RenderButton.h
@@ -61,6 +61,8 @@ public:
     RenderBlock* innerRenderer() const { return m_inner.get(); }
     void setInnerRenderer(RenderBlock&);
 
+    int baselinePosition(FontBaseline, bool firstLine, LineDirectionMode, LinePositionMode = PositionOnContainingLine) const override;
+
 private:
     void element() const = delete;
 
